--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ python_requires = >=3.8,!=3.9.7,<3.11
 install_requires =
     black~=22.3
     flake8~=3.9.0
+    Flake8-pyproject>=0.9.0
     isort~=5.9.0
     mypy~=0.910
     pytest~=6.2
